[package]
name = "llm-reasoning-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
axum = "0.8"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
serial_test = "3.0"